--- a/Front/src/components/PrimaryBtn/PrimaryBtn.module.css
+++ b/Front/src/components/PrimaryBtn/PrimaryBtn.module.css
@@ -3,7 +3,7 @@
   border-radius: 3rem;
   color: white;
   font-weight: bold;
-  padding: 0.8rem 2.5rem;
-  font-size: 20px;
+  padding: 0.7em 2.5em;
+  font-size: 1.2rem;
   border: none;
 }
