--- a/Front/src/components/HomeImg/HomeImg.module.css
+++ b/Front/src/components/HomeImg/HomeImg.module.css
@@ -1,8 +1,10 @@
 .photo {
-  width: 100%;
-  height: fit-content;
+  width: 100vw;
+  object-fit: cover;
+  height: 850px;
 }
 .paragraph {
+  text-align: center;
   font-weight: bold;
   font-size: 30px;
   padding: 25px 50px;
@@ -10,8 +12,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
-  opacity: 0.8;
+  background-color: rgb(255, 255, 255,0.8);
 }
 .paragraph * {
   margin-bottom: 10px;
